Added the museum tab where artifacts can be viewed. Fixed some inconsistencies.

--- a/map.html
+++ b/map.html
@@ -18,11 +18,12 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
         <figure>
-            <a href="TownMap.png" target="_blank" title="click to enlarge image"><img src="TownMap.png"></a>
-            <figcaption>The map as of April 2023.</figcaption>
+            <a href="mapmay2023.png" target="_blank" title="click to enlarge image"><img src="mapmay2023.png"></a>
+            <figcaption>The map as of May 2023.</figcaption>
         </figure>
     </div>
 
