--- a/museum.html
+++ b/museum.html
@@ -6,53 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <title>Historical Events</title>
+    <title>Museum</title>
 </head>
 <body>
     <div class="welcome">
-        <h1 class="title">Historical Events</h1>
+        <h1 class="title">Museum</h1>
+        <h3 style="text-align: center;">Explore the list of artifacts below.</h3>
     </div>
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
         <a href="streets.html" class="navbtn">Streets</a>
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="history.html" class="navbtn" >Historical Events</a>
         <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
+        <figure>
+            <a href="museum.png"><img src="museum.png"></a>
+            <figcaption>The Museum</figcaption>
+        </figure>
         <table class="listdata">
             <thead>
             <tr>
-                <th>List of historical events in order</th>
+                <th>List of artifacts</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td>March 2021: SMP is started</td>
+                <td><a href="creeper_head.png" style="text-decoration: none;" class="link">Creeper Head</a></td>
             </tr>
             <tr>
-                <td>April 16 2021: <a href="oldsmpmap2021.png" target="_blank" class="link">The SMP map is created</a></td>
+                <td><a href="warden_head.png" style="text-decoration: none;" class="link">Warden Head</a></td>
             </tr>
             <tr>
-                <td>May or June 2021: The disc incident</td>
+                <td><a href="dragon_head.png" style="text-decoration: none;" class="link">Dragon Head</a></td>
             </tr>
             <tr>
-                <td>July 2021: SMP dies</td>
+                <td><a href="artifacts_wing1.png" style="text-decoration: none;" class="link">Artifacts Wing 1</a></td>
             </tr>
             <tr>
-                <td>February 2023: Revival</td>
-            </tr>
-            <tr>
-                <td>April 2023: <a href="Church.png" target="_blank" class="link">A church is made to appease the god</a></td>
-            </tr>
-            <tr>
-                <td>May 2023: God grows increasingly angry</td>
+                <td><a href="artifacts_wing2.png" style="text-decoration: none;" class="link">Artifacts Wing 2</a></a></td>
             </tr>
             </tbody>
         </table>
     </div>
-
 </body>
 <script>
     function NoPage() {
