--- a/oakstreet.html
+++ b/oakstreet.html
@@ -18,6 +18,7 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
 
     <div class="page">
@@ -26,7 +27,7 @@
             <figcaption>A dictator Jelly poster can be seen on the light post.</figcaption>
     </figure>
     <hr>
-    <table class="history">
+    <table class="listdata">
       <thead>
       <tr>
           <th>Notable Locations</th>
