--- a/streets.html
+++ b/streets.html
@@ -19,9 +19,10 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn" >Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
-        <table class="history">
+        <table class="listdata">
             <thead>
             <tr>
                 <th>List of streets</th>
