--- a/dirtstreet.html
+++ b/dirtstreet.html
@@ -18,6 +18,7 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
         <figure>
@@ -25,7 +26,7 @@
             <figcaption>Dirt Street</figcaption>
     </figure>
     <hr>
-    <table class="history">
+    <table class="listdata">
       <thead>
       <tr>
           <th>Notable Locations</th>
