--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
         <p class="bold">Under construction</p>
