--- a/villageroad.html
+++ b/villageroad.html
@@ -18,6 +18,7 @@
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
+        <a href="museum.html" class="navbtn">Museum</a>
       </div> 
     <div class="page">
         <figure>
@@ -35,7 +36,7 @@
     </figure>
     <hr>
   
-    <table class="history">
+    <table class="listdata">
       <thead>
       <tr>
           <th>Notable Locations</th>
