Moved all images to an external source to reduce file size.

--- a/dirtstreet.html
+++ b/dirtstreet.html
@@ -12,17 +12,18 @@
     <div class="welcome">
         <h1 class="title">Dirt Street</h1>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      <a href="index.html" class="navbtn">Home</a>
+      <a href="streets.html" class="navbtn">Streets</a>
+      <a href="map.html" class="navbtn">Map</a>
+      <a href="photos.html" class="navbtn">Photo Gallery</a>
+      <a href="history.html" class="navbtn" >Historical Events</a>
+      <a href="museum.html" class="navbtn">Museum</a>
+    </div> <!--End navbar-->
     <div class="page">
         <figure>
-        <img src="DirtStreet.png">
+        <img src="https://i.ibb.co/WBPrnVf/Dirt-Street.png">
             <figcaption>Dirt Street</figcaption>
     </figure>
     <hr>
