--- a/fingerbreakingbadstreet.html
+++ b/fingerbreakingbadstreet.html
@@ -12,22 +12,23 @@
     <div class="welcome">
         <h1 class="title">Finger Breaking Bad Street</h1>
     </div>
-    <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+   <!--Navbar below. do not remove this.-->
+   <div class="nav">
+    <a href="index.html" class="navbtn">Home</a>
+    <a href="streets.html" class="navbtn">Streets</a>
+    <a href="map.html" class="navbtn">Map</a>
+    <a href="photos.html" class="navbtn">Photo Gallery</a>
+    <a href="history.html" class="navbtn" >Historical Events</a>
+    <a href="museum.html" class="navbtn">Museum</a>
+  </div> <!--End navbar--> 
     <div class="page">
         <figure>
-        <a href="fingerbreakingbadroad1.png" target="_blank"><img src="fingerbreakingbadroad1.png"></a>
+        <a href="https://i.ibb.co/2NpjySv/fingerbreakingbadroad1.png" target="_blank"><img src="https://i.ibb.co/2NpjySv/fingerbreakingbadroad1.png"></a>
             <figcaption>Finger Breaking Bad Street</figcaption>
     </figure><br>
     <div class="page">
         <figure>
-        <a href="fingerbreakingbadroad2.png" target="_blank"><img src="fingerbreakingbadroad2.png"></a>
+        <a href="https://i.ibb.co/XtXdyBD/fingerbreakingbadroad2.png" target="_blank"><img src="https://i.ibb.co/XtXdyBD/fingerbreakingbadroad2.png"></a>
             <figcaption>more finger breaking bad street</figcaption>
     </figure>
     <hr>
