--- a/map.html
+++ b/map.html
@@ -12,17 +12,18 @@
     <div class="welcome">
         <h1 class="title">The Map</h1>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      <a href="index.html" class="navbtn">Home</a>
+      <a href="streets.html" class="navbtn">Streets</a>
+      <a href="map.html" class="navbtn">Map</a>
+      <a href="photos.html" class="navbtn">Photo Gallery</a>
+      <a href="history.html" class="navbtn" >Historical Events</a>
+      <a href="museum.html" class="navbtn">Museum</a>
+    </div> <!--End navbar-->
     <div class="page">
         <figure>
-            <a href="mapmay2023.png" target="_blank" title="click to enlarge image"><img src="mapmay2023.png"></a>
+            <a href="https://i.ibb.co/5kcRjkd/mapmay2023.png" target="_blank" title="click to enlarge image"><img src="https://i.ibb.co/5kcRjkd/mapmay2023.png"></a>
             <figcaption>The map as of May 2023.</figcaption>
         </figure>
     </div>
