--- a/museum.html
+++ b/museum.html
@@ -13,6 +13,7 @@
         <h1 class="title">Museum</h1>
         <h3 style="text-align: center;">Explore the list of artifacts below.</h3>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
         <a href="streets.html" class="navbtn">Streets</a>
@@ -20,13 +21,13 @@
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn" >Historical Events</a>
         <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      </div> <!--End navbar-->
     <div class="page">
         <figure>
-            <a href="museum.png"><img src="museum.png"></a>
+            <a href="https://i.ibb.co/kDLCsn5/museum.png"><img src="https://i.ibb.co/kDLCsn5/museum.png"></a>
             <figcaption>The Museum</figcaption>
         </figure>
-        <table class="listdata">
+        <table class="listdata"> <!--List start-->
             <thead>
             <tr>
                 <th>List of artifacts</th>
@@ -34,22 +35,22 @@
             </thead>
             <tbody>
             <tr>
-                <td><a href="creeper_head.png" style="text-decoration: none;" class="link">Creeper Head</a></td>
+                <td><a href="https://i.ibb.co/P1GDNzt/creeper-head.png" style="text-decoration: none;" class="link">Creeper Head</a></td>
             </tr>
             <tr>
-                <td><a href="warden_head.png" style="text-decoration: none;" class="link">Warden Head</a></td>
+                <td><a href="https://i.ibb.co/2trZJgQ/warden-head.png" style="text-decoration: none;" class="link">Warden Head</a></td>
             </tr>
             <tr>
-                <td><a href="dragon_head.png" style="text-decoration: none;" class="link">Dragon Head</a></td>
+                <td><a href="https://i.ibb.co/9ckcfQy/dragon-head.png" style="text-decoration: none;" class="link">Dragon Head</a></td>
             </tr>
             <tr>
-                <td><a href="artifacts_wing1.png" style="text-decoration: none;" class="link">Artifacts Wing 1</a></td>
+                <td><a href="https://i.ibb.co/r0Wzx2S/artifacts-wing1.png" style="text-decoration: none;" class="link">Artifacts Wing 1</a></td>
             </tr>
             <tr>
-                <td><a href="artifacts_wing2.png" style="text-decoration: none;" class="link">Artifacts Wing 2</a></a></td>
+                <td><a href="https://i.ibb.co/2SZBWjP/artifacts-wing2.png" style="text-decoration: none;" class="link">Artifacts Wing 2</a></a></td>
             </tr>
             </tbody>
-        </table>
+        </table><!--List end-->
     </div>
 </body>
 <script>
