--- a/oakstreet.html
+++ b/oakstreet.html
@@ -12,18 +12,19 @@
     <div class="welcome">
         <h1 class="title">Oak Street</h1>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      <a href="index.html" class="navbtn">Home</a>
+      <a href="streets.html" class="navbtn">Streets</a>
+      <a href="map.html" class="navbtn">Map</a>
+      <a href="photos.html" class="navbtn">Photo Gallery</a>
+      <a href="history.html" class="navbtn" >Historical Events</a>
+      <a href="museum.html" class="navbtn">Museum</a>
+    </div> <!--End navbar-->
 
     <div class="page">
         <figure>
-        <a href="OakStreet.png" target="_blank" title="click to enlarge image"><img src="OakStreet.png"></a>
+        <a href="https://i.ibb.co/t8sPPN3/Oak-Street.png" target="_blank" title="click to enlarge image"><img src="https://i.ibb.co/t8sPPN3/Oak-Street.png"></a>
             <figcaption>A dictator Jelly poster can be seen on the light post.</figcaption>
     </figure>
     <hr>
