--- a/photos.html
+++ b/photos.html
@@ -13,63 +13,64 @@
         <h1 class="title">Photo Gallery</h1>
         <p class="center" style="text-align: center;">Click on images to view them in a new tab</p>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      <a href="index.html" class="navbtn">Home</a>
+      <a href="streets.html" class="navbtn">Streets</a>
+      <a href="map.html" class="navbtn">Map</a>
+      <a href="photos.html" class="navbtn">Photo Gallery</a>
+      <a href="history.html" class="navbtn" >Historical Events</a>
+      <a href="museum.html" class="navbtn">Museum</a>
+    </div> <!--End navbar-->
     <div class="page">
         <div id="gallery">
-            <a href="AddictLane.png" title="click to enlarge image (Addict Lane)" target="_blank"><img src="AddictLane.png" alt="Addict Lane" class="galleryimg"></a>
-            <a href="Arena.png" title="click to enlarge image (The Arena)" target="_blank"><img src="Arena.png" alt="The Arena" class="galleryimg"></a>
-            <a href="Belch Road.png" title="click to enlarge image (Belch Road)" target="_blank"><img src="Belch Road.png" alt="Belch Road" class="galleryimg"></a>
-            <a href="Bridge.png" title="click to enlarge image (The Bridge)" target="_blank"><img src="Bridge.png" alt="The Bridge" class="galleryimg"></a>
-            <a href="Church.png" title="click to enlarge image (The Church)" target="_blank"><img src="Church.png" alt="The Church" class="galleryimg"></a>
-            <a href="ChurchInterior.png" title="click to enlarge image (Inside of the church)" target="_blank"><img src="ChurchInterior.png" alt="Inside of the church" class="galleryimg"></a>
-            <a href="DirtStreet.png" title="click to enlarge image (Dirt Street)" target="_blank"><img src="DirtStreet.png" alt="Dirt Street" class="galleryimg"></a>
-            <a href="DrugLabRoad.png" title="click to enlarge image (Drug Lab Road)" target="_blank"><img src="DrugLabRoad.png" alt="Drug Lab Road" class="galleryimg"></a>
-            <a href="Mayor.png" title="click to enlarge image (The Mayor)" target="_blank"><img src="Mayor.png" alt="The Mayor" class="galleryimg"></a>
-            <a href="MayorBuilding.png" title="click to enlarge image (The Mayor's Building)" target="_blank"><img src="MayorBuilding.png" alt="The Mayor's Building" class="galleryimg"></a>
-            <a href="McDonalds.png" title="click to enlarge image (Mcdonald's)" target="_blank"><img src="McDonalds.png" alt="Mcdonald's" class="galleryimg"></a>
-            <a href="MethHouse.png" title="click to enlarge image (Meth House)" target="_blank"><img src="MethHouse.png" alt="Meth House" class="galleryimg"></a>
-            <a href="OakStreet.png" title="click to enlarge image (Oak Street)" target="_blank"><img src="OakStreet.png" alt="Oak Street" class="galleryimg"></a>
-            <a href="SethRoad.png" title="click to enlarge image (Seth Road)" target="_blank"><img src="SethRoad.png" alt="Seth Road" class="galleryimg"></a>
-            <a href="ShopsRoad.png" title="click to enlarge image (Shops on the road)" target="_blank"><img src="ShopsRoad.png" alt="Shops on the road" class="galleryimg"></a>
-            <a href="ShopsRow.png" title="click to enlarge image (Row of shops)" target="_blank"><img src="ShopsRow.png" alt="Row of shops" class="galleryimg"></a>
-            <a href="StevenMansion.png" title="click to enlarge image (Steven's Mansion)" target="_blank"><img src="StevenMansion.png" alt="Steven's Mansion" class="galleryimg"></a>
-            <a href="Theatre.png" title="click to enlarge image (Theatre)" target="_blank"><img src="Theatre.png" alt="Theatre" class="galleryimg"></a>
-            <a href="TownCenter.png" title="click to enlarge image (The center of town)" target="_blank"><img src="TownCenter.png" alt="The center of town" class="galleryimg"></a>
-            <a href="creeper1.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="creeper1.png" alt="Levitating creeper" class="galleryimg"></a>
-            <a href="creeper2.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="creeper2.png" alt="Levitating creeper" class="galleryimg"></a>
-            <a href="heads.png" title="click to enlarge image (heads in a basement! yuck!)" target="_blank"><img src="heads.png" alt="heads in a basement! yuck!" class="galleryimg"></a>
-            <a href="eater.png" title="click to enlarge image (Experiment gone wrong)" target="_blank"><img src="eater.png" alt="Experiment gone wrong" class="galleryimg"></a>
-            <a href="diseasebreach.png" title="click to enlarge image (the disease escaped)" target="_blank"><img src="diseasebreach.png" alt="the disease escaped" class="galleryimg"></a>
-            <a href="diseaselab.png" title="click to enlarge image (The lab)" target="_blank"><img src="diseaselab.png" alt="The lab" class="galleryimg"></a>
-            <a href="airview.png" title="click to enlarge image (The town from the sky)" target="_blank"><img src="airview.png" alt="The town from the sky" class="galleryimg"></a>
-            <a href="carnage.png" title="click to enlarge image (death)" target="_blank"><img src="carnage.png" alt="death" class="galleryimg"></a>
-            <a href="enderdragon_death.png" title="click to enlarge image (Death of the Ender Dragon)" target="_blank"><img src="enderdragon_death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
-            <a href="oldsmpmap2021.png" title="click to enlarge image (Old map of the smp from 2021)" target="_blank"><img src="oldsmpmap2021.png" alt="Old map of the smp from 2021" class="galleryimg"></a>
-            <a href="cliff.png" title="click to enlarge image (cliff)" target="_blank"><img src="cliff.png" alt="cliff" class="galleryimg"></a>
-            <a href="raid.png" title="click to enlarge image (raid)" target="_blank"><img src="raid.png" alt="raid" class="galleryimg"></a>
-            <a href="curse1.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse1.png" alt="The curse" class="galleryimg"></a>
-            <a href="curse2.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse2.png" alt="The curse" class="galleryimg"></a>
-            <a href="frogfields.png" title="click to enlarge image (Frog Fields)" target="_blank"><img src="frogfields.png" alt="Frog Fields" class="galleryimg"></a>
-            <a href="frog1.png" title="click to enlarge image (Frog)" target="_blank"><img src="frog1.png" alt="Frog" class="galleryimg"></a>
-            <a href="frog2.png" title="click to enlarge image (Frog)" target="_blank"><img src="frog2.png" alt="Frog" class="galleryimg"></a>
-            <a href="methouse2.png" title="click to enlarge image (Meth House)" target="_blank"><img src="methouse2.png" alt="Meth House" class="galleryimg"></a>
-            <a href="swamphouse.png" title="click to enlarge image (Swamp House)" target="_blank"><img src="swamphouse.png" alt="Swamp House" class="galleryimg"></a>
-            <a href="cloudwras.png" title="click to enlarge image (cloudwras)" target="_blank"><img src="cloudwras.png" alt="cloudwras" class="galleryimg"></a>
-            <a href="run.png" title="click to enlarge image (run)" target="_blank"><img src="run.png" alt="run" class="galleryimg"></a>
-            <a href="lantern.png" title="click to enlarge image (lantern)" target="_blank"><img src="lantern.png" alt="lantern" class="galleryimg"></a>
-            <a href="drain.png" title="click to enlarge image (drain)" target="_blank"><img src="drain.png" alt="drain" class="galleryimg"></a>
-            <a href="restaurant.jpg" title="click to enlarge image (restaurant)" target="_blank"><img src="restaurant.jpg" alt="restaurant" class="galleryimg"></a>
-            <a href="redhouse.png" title="click to enlarge image (red house)" target="_blank"><img src="redhouse.png" alt="red house" class="galleryimg"></a>
-            <a href="houses.png" title="click to enlarge image (houses)" target="_blank"><img src="houses.png" alt="houses" class="galleryimg"></a>
-            <a href="whitehouse.png" title="click to enlarge image (white house)" target="_blank"><img src="whitehouse.png" alt="white house" class="galleryimg"></a>
-            <a href="sunset.png" title="click to enlarge image (sunset)" target="_blank"><img src="sunset.png" alt="sunset" class="galleryimg"></a>
+            <a href="https://i.ibb.co/tBPWSwt/Addict-Lane.png" title="click to enlarge image (Addict Lane)" target="_blank"><img src="https://i.ibb.co/tBPWSwt/Addict-Lane.png" alt="Addict Lane" class="galleryimg"></a>
+            <a href="https://i.ibb.co/74nGQRP/Arena.png" title="click to enlarge image (The Arena)" target="_blank"><img src="https://i.ibb.co/74nGQRP/Arena.png" alt="The Arena" class="galleryimg"></a>
+            <a href="https://i.ibb.co/BjMrDWp/Belch-Road.png" title="click to enlarge image (Belch Road)" target="_blank"><img src="https://i.ibb.co/BjMrDWp/Belch-Road.png" alt="Belch Road" class="galleryimg"></a>
+            <a href="https://i.ibb.co/sKLby0b/Bridge.png" title="click to enlarge image (The Bridge)" target="_blank"><img src="https://i.ibb.co/sKLby0b/Bridge.png" alt="The Bridge" class="galleryimg"></a>
+            <a href="https://i.ibb.co/tXyR5QL/Church.png" title="click to enlarge image (The Church)" target="_blank"><img src="https://i.ibb.co/tXyR5QL/Church.png" alt="The Church" class="galleryimg"></a>
+            <a href="https://i.ibb.co/KjHkhsP/Church-Interior.png" title="click to enlarge image (Inside of the church)" target="_blank"><img src="https://i.ibb.co/KjHkhsP/Church-Interior.png" alt="Inside of the church" class="galleryimg"></a>
+            <a href="https://i.ibb.co/WBPrnVf/Dirt-Street.png" title="click to enlarge image (Dirt Street)" target="_blank"><img src="https://i.ibb.co/WBPrnVf/Dirt-Street.png" alt="Dirt Street" class="galleryimg"></a>
+            <a href="https://i.ibb.co/KhrpKxG/Drug-Lab-Road.png" title="click to enlarge image (Drug Lab Road)" target="_blank"><img src="https://i.ibb.co/KhrpKxG/Drug-Lab-Road.png" alt="Drug Lab Road" class="galleryimg"></a>
+            <a href="https://i.ibb.co/mbkjSnH/Mayor.png" title="click to enlarge image (The Mayor)" target="_blank"><img src="https://i.ibb.co/mbkjSnH/Mayor.png" alt="The Mayor" class="galleryimg"></a>
+            <a href="https://i.ibb.co/SJZyJJ8/Mayor-Building.png" title="click to enlarge image (The Mayor's Building)" target="_blank"><img src="https://i.ibb.co/SJZyJJ8/Mayor-Building.png" alt="The Mayor's Building" class="galleryimg"></a>
+            <a href="https://i.ibb.co/Wg6wpSN/Mc-Donalds.png" title="click to enlarge image (Mcdonald's)" target="_blank"><img src="https://i.ibb.co/Wg6wpSN/Mc-Donalds.png" alt="Mcdonald's" class="galleryimg"></a>
+            <a href="https://i.ibb.co/gDx5D5R/Meth-House.png" title="click to enlarge image (Meth House)" target="_blank"><img src="https://i.ibb.co/gDx5D5R/Meth-House.png" alt="Meth House" class="galleryimg"></a>
+            <a href="https://i.ibb.co/t8sPPN3/Oak-Street.png" title="click to enlarge image (Oak Street)" target="_blank"><img src="https://i.ibb.co/t8sPPN3/Oak-Street.png" alt="Oak Street" class="galleryimg"></a>
+            <a href="https://i.ibb.co/GHcGdHw/SethRoad.png" title="click to enlarge image (Seth Road)" target="_blank"><img src="https://i.ibb.co/GHcGdHw/SethRoad.png" alt="Seth Road" class="galleryimg"></a>
+            <a href="https://i.ibb.co/rZ0f4sn/Shops-Road.png" title="click to enlarge image (Shops on the road)" target="_blank"><img src="https://i.ibb.co/rZ0f4sn/Shops-Road.png" alt="Shops on the road" class="galleryimg"></a>
+            <a href="https://i.ibb.co/pf6xQJK/ShopsRow.png" title="click to enlarge image (Row of shops)" target="_blank"><img src="https://i.ibb.co/pf6xQJK/ShopsRow.png" alt="Row of shops" class="galleryimg"></a>
+            <a href="https://i.ibb.co/zXdz0wN/Steven-Mansion.png" title="click to enlarge image (Steven's Mansion)" target="_blank"><img src="https://i.ibb.co/zXdz0wN/Steven-Mansion.png" alt="Steven's Mansion" class="galleryimg"></a>
+            <a href="https://i.ibb.co/PNKQ58V/Theatre.png" title="click to enlarge image (Theatre)" target="_blank"><img src="https://i.ibb.co/PNKQ58V/Theatre.png" alt="Theatre" class="galleryimg"></a>
+            <a href="https://i.ibb.co/BZzVjwK/Town-Center.png" title="click to enlarge image (The center of town)" target="_blank"><img src="https://i.ibb.co/BZzVjwK/Town-Center.png" alt="The center of town" class="galleryimg"></a>
+            <a href="https://i.ibb.co/DKYZJM6/creeper1.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="https://i.ibb.co/DKYZJM6/creeper1.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="https://i.ibb.co/m4kfK80/creeper2.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="https://i.ibb.co/m4kfK80/creeper2.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="https://i.ibb.co/K0p95mW/heads.png" title="click to enlarge image (heads in a basement! yuck!)" target="_blank"><img src="https://i.ibb.co/K0p95mW/heads.png" alt="heads in a basement! yuck!" class="galleryimg"></a>
+            <a href="https://i.ibb.co/3zvmfWX/eater.png" title="click to enlarge image (Experiment gone wrong)" target="_blank"><img src="https://i.ibb.co/3zvmfWX/eater.png" alt="Experiment gone wrong" class="galleryimg"></a>
+            <a href="https://i.ibb.co/hDNWBMK/diseasebreach.png" title="click to enlarge image (the disease escaped)" target="_blank"><img src="https://i.ibb.co/hDNWBMK/diseasebreach.png" alt="the disease escaped" class="galleryimg"></a>
+            <a href="https://i.ibb.co/195Hkn8/diseaselab.png" title="click to enlarge image (The lab)" target="_blank"><img src="https://i.ibb.co/195Hkn8/diseaselab.png" alt="The lab" class="galleryimg"></a>
+            <a href="https://i.ibb.co/hMfHBng/airview.png" title="click to enlarge image (The town from the sky)" target="_blank"><img src="https://i.ibb.co/hMfHBng/airview.png" alt="The town from the sky" class="galleryimg"></a>
+            <a href="https://i.ibb.co/s9gTLWj/carnage.png" title="click to enlarge image (death)" target="_blank"><img src="https://i.ibb.co/s9gTLWj/carnage.png" alt="death" class="galleryimg"></a>
+            <a href="https://i.ibb.co/xFfvN8v/enderdragon-death.png" title="click to enlarge image (Death of the Ender Dragon)" target="_blank"><img src="https://i.ibb.co/xFfvN8v/enderdragon-death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
+            <a href="https://i.ibb.co/F3Rrpff/oldsmpmap2021.png" title="click to enlarge image (Old map of the smp from 2021)" target="_blank"><img src="https://i.ibb.co/F3Rrpff/oldsmpmap2021.png" alt="Old map of the smp from 2021" class="galleryimg"></a>
+            <a href="https://i.ibb.co/hLY4WZB/cliff.png" title="click to enlarge image (cliff)" target="_blank"><img src="https://i.ibb.co/hLY4WZB/cliff.png" alt="cliff" class="galleryimg"></a>
+            <a href="https://i.ibb.co/vd8zkhh/raid.png" title="click to enlarge image (raid)" target="_blank"><img src="https://i.ibb.co/vd8zkhh/raid.png" alt="raid" class="galleryimg"></a>
+            <a href="https://i.ibb.co/X7CwTf5/curse1.png" title="click to enlarge image (The curse)" target="_blank"><img src="https://i.ibb.co/X7CwTf5/curse1.png" alt="The curse" class="galleryimg"></a>
+            <a href="https://i.ibb.co/kyq3QFv/curse2.png" title="click to enlarge image (The curse)" target="_blank"><img src="https://i.ibb.co/kyq3QFv/curse2.png" alt="The curse" class="galleryimg"></a>
+            <a href="https://i.ibb.co/F6HztBd/frogfields.png" title="click to enlarge image (Frog Fields)" target="_blank"><img src="https://i.ibb.co/F6HztBd/frogfields.png" alt="Frog Fields" class="galleryimg"></a>
+            <a href="https://i.ibb.co/w78VB2k/frog1.png" title="click to enlarge image (Frog)" target="_blank"><img src="https://i.ibb.co/w78VB2k/frog1.png" alt="Frog" class="galleryimg"></a>
+            <a href="https://i.ibb.co/Q9XRH4D/frog2.png" title="click to enlarge image (Frog)" target="_blank"><img src="https://i.ibb.co/Q9XRH4D/frog2.png" alt="Frog" class="galleryimg"></a>
+            <a href="https://i.ibb.co/svLhpm3/methouse2.png" title="click to enlarge image (Meth House)" target="_blank"><img src="https://i.ibb.co/svLhpm3/methouse2.png" alt="Meth House" class="galleryimg"></a>
+            <a href="https://i.ibb.co/vHk3Y56/swamphouse.png" title="click to enlarge image (Swamp House)" target="_blank"><img src="https://i.ibb.co/vHk3Y56/swamphouse.png" alt="Swamp House" class="galleryimg"></a>
+            <a href="https://i.ibb.co/6rDk8Ns/cloudwras.png" title="click to enlarge image (cloudwras)" target="_blank"><img src="https://i.ibb.co/6rDk8Ns/cloudwras.png" alt="cloudwras" class="galleryimg"></a>
+            <a href="https://i.ibb.co/VBsRn4X/run.png" title="click to enlarge image (run)" target="_blank"><img src="https://i.ibb.co/VBsRn4X/run.png" alt="run" class="galleryimg"></a>
+            <a href="https://i.ibb.co/5rYfxwb/lantern.png" title="click to enlarge image (lantern)" target="_blank"><img src="https://i.ibb.co/5rYfxwb/lantern.png" alt="lantern" class="galleryimg"></a>
+            <a href="https://i.ibb.co/933175f/drain.png" title="click to enlarge image (drain)" target="_blank"><img src="https://i.ibb.co/933175f/drain.png" alt="drain" class="galleryimg"></a>
+            <a href="https://i.ibb.co/Cb0Vmhx/restaurant.jpg" title="click to enlarge image (restaurant)" target="_blank"><img src="https://i.ibb.co/Cb0Vmhx/restaurant.jpg" alt="restaurant" class="galleryimg"></a>
+            <a href="https://i.ibb.co/Q8QTkwz/redhouse.png" title="click to enlarge image (red house)" target="_blank"><img src="https://i.ibb.co/Q8QTkwz/redhouse.png" alt="red house" class="galleryimg"></a>
+            <a href="https://i.ibb.co/1LgcRrq/houses.png" title="click to enlarge image (houses)" target="_blank"><img src="https://i.ibb.co/1LgcRrq/houses.png" alt="houses" class="galleryimg"></a>
+            <a href="https://i.ibb.co/58J36WD/whitehouse.png" title="click to enlarge image (white house)" target="_blank"><img src="https://i.ibb.co/58J36WD/whitehouse.png" alt="white house" class="galleryimg"></a>
+            <a href="https://i.ibb.co/bg6cW9H/sunset.png" title="click to enlarge image (sunset)" target="_blank"><img src="https://i.ibb.co/bg6cW9H/sunset.png" alt="sunset" class="galleryimg"></a>
           </div>
     </div>
 
