--- a/villageroad.html
+++ b/villageroad.html
@@ -12,26 +12,27 @@
     <div class="welcome">
         <h1 class="title">Village Road</h1>
     </div>
-    <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+   <!--Navbar below. do not remove this.-->
+   <div class="nav">
+    <a href="index.html" class="navbtn">Home</a>
+    <a href="streets.html" class="navbtn">Streets</a>
+    <a href="map.html" class="navbtn">Map</a>
+    <a href="photos.html" class="navbtn">Photo Gallery</a>
+    <a href="history.html" class="navbtn" >Historical Events</a>
+    <a href="museum.html" class="navbtn">Museum</a>
+  </div> <!--End navbar--> 
     <div class="page">
         <figure>
-            <a href="houses.png" target="_blank"><img src="houses.png"></a>
+            <a href="https://i.ibb.co/1LgcRrq/houses.png" target="_blank"><img src="https://i.ibb.co/1LgcRrq/houses.png"></a>
                 <figcaption>Neighborhood Entrance</figcaption>
         </figure><br>
         <figure>
-        <a href="redhouse.png" target="_blank"><img src="redhouse.png"></a>
+        <a href="https://i.ibb.co/Q8QTkwz/redhouse.png" target="_blank"><img src="https://i.ibb.co/Q8QTkwz/redhouse.png"></a>
             <figcaption>Red house</figcaption>
     </figure><br>
     <div class="page">
         <figure>
-        <a href="whitehouse.png" target="_blank"><img src="whitehouse.png"></a>
+        <a href="https://i.ibb.co/58J36WD/whitehouse.png" target="_blank"><img src="https://i.ibb.co/58J36WD/whitehouse.png"></a>
             <figcaption>White house</figcaption>
     </figure>
     <hr>
