--- a/addictlane.html
+++ b/addictlane.html
@@ -12,17 +12,18 @@
     <div class="welcome">
         <h1 class="title">Addict Lane</h1>
     </div>
-    <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+  <!--Navbar below. do not remove this.-->
+  <div class="nav">
+    <a href="index.html" class="navbtn">Home</a>
+    <a href="streets.html" class="navbtn">Streets</a>
+    <a href="map.html" class="navbtn">Map</a>
+    <a href="photos.html" class="navbtn">Photo Gallery</a>
+    <a href="history.html" class="navbtn" >Historical Events</a>
+    <a href="museum.html" class="navbtn">Museum</a>
+  </div> <!--End navbar-->
     <div class="page">
         <figure>
-        <a href="AddictLane.png" target="_blank" title="click to enlarge image"><img src="AddictLane.png"></a>
+        <a href="https://i.ibb.co/tBPWSwt/Addict-Lane.png" target="_blank" title="click to enlarge image"><img src="https://i.ibb.co/tBPWSwt/Addict-Lane.png"></a>
             <figcaption>This road leads into the Swamp.</figcaption>
     </figure>
     <hr>
