--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="welcome">
         <h1 class="title">SMP Archives</h1>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      <a href="index.html" class="navbtn">Home</a>
+      <a href="streets.html" class="navbtn">Streets</a>
+      <a href="map.html" class="navbtn">Map</a>
+      <a href="photos.html" class="navbtn">Photo Gallery</a>
+      <a href="history.html" class="navbtn" >Historical Events</a>
+      <a href="museum.html" class="navbtn">Museum</a>
+    </div> <!--End navbar-->
     <div class="page">
         <p class="bold">Under construction</p>
         <p><span class="bold">Server IP:</span> <span>-----------</span></p>
