--- a/streets.html
+++ b/streets.html
@@ -13,6 +13,7 @@
         <h1 class="title">Streets</h1>
         <h3 style="text-align: center;">Click a street below to view info about it</h3>
     </div>
+    <!--Navbar below. do not remove this.-->
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
         <a href="streets.html" class="navbtn">Streets</a>
@@ -20,7 +21,7 @@
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn" >Historical Events</a>
         <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+      </div> <!--End navbar-->
     <div class="page">
         <table class="listdata">
             <thead>
