--- a/taterroad.html
+++ b/taterroad.html
@@ -12,22 +12,23 @@
     <div class="welcome">
         <h1 class="title">Tater Road</h1>
     </div>
-    <div class="nav">
-        <a href="index.html" class="navbtn">Home</a>
-        <a href="streets.html" class="navbtn">Streets</a>
-        <a href="map.html" class="navbtn">Map</a>
-        <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn">Historical Events</a>
-        <a href="museum.html" class="navbtn">Museum</a>
-      </div> 
+   <!--Navbar below. do not remove this.-->
+   <div class="nav">
+    <a href="index.html" class="navbtn">Home</a>
+    <a href="streets.html" class="navbtn">Streets</a>
+    <a href="map.html" class="navbtn">Map</a>
+    <a href="photos.html" class="navbtn">Photo Gallery</a>
+    <a href="history.html" class="navbtn" >Historical Events</a>
+    <a href="museum.html" class="navbtn">Museum</a>
+  </div> <!--End navbar-->
     <div class="page">
         <figure>
-        <a href="taterroad1.png" target="_blank"><img src="taterroad1.png"></a>
+        <a href="https://i.ibb.co/12JnVbT/taterroad1.png" target="_blank"><img src="https://i.ibb.co/12JnVbT/taterroad1.png"></a>
             <figcaption>Tater Road</figcaption>
     </figure><br>
     <div class="page">
         <figure>
-        <a href="taterroad2.png" target="_blank"><img src="taterroad2.png"></a>
+        <a href="https://i.ibb.co/yF3vNTM/taterroad2.png" target="_blank"><img src="https://i.ibb.co/yF3vNTM/taterroad2.png"></a>
             <figcaption>more tater road</figcaption>
     </figure>
     <hr>
