Updated the history tab to show the correct images.

--- a/history.html
+++ b/history.html
@@ -33,7 +33,7 @@
                 <td>March 2021: SMP is started</td>
             </tr>
             <tr>
-                <td>April 16 2021: <a href="oldsmpmap2021.png" target="_blank" class="link">The SMP map is created</a></td>
+                <td>April 16 2021: <a href="https://i.ibb.co/F3Rrpff/oldsmpmap2021.png" target="_blank" class="link">The SMP map is created</a></td>
             </tr>
             <tr>
                 <td>May or June 2021: The disc incident</td>
@@ -45,7 +45,7 @@
                 <td>February 2023: Revival</td>
             </tr>
             <tr>
-                <td>April 2023: <a href="Church.png" target="_blank" class="link">A church is made to appease the god</a></td>
+                <td>April 2023: <a href="https://i.ibb.co/tXyR5QL/Church.png" target="_blank" class="link">A church is made to appease the god</a></td>
             </tr>
             <tr>
                 <td>May 2023: God grows increasingly angry</td>
