removed some unused code

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="welcome">
         <h1 class="title">SMP Archives</h1>
-    </div>
     <!--Navbar below. do not remove this.-->
     <div class="nav">
       <a href="index.html" class="navbtn">Home</a>
@@ -23,7 +21,7 @@
     </div> <!--End navbar-->
     <div class="page">
         <p class="bold">Under construction</p>
-        <p><span class="bold">Server IP:</span> <span>-----------</span></p>
+        <p><span class="bold">Server IP:</span> <span>secret for now...</span></p>
         <p><span class="bold">Minecraft Version:</span> <span>1.19.4</span></p>
     </div>
 </body>
