--- a/map.html
+++ b/map.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <title>Map</title>
+    <title>The Map</title>
 </head>
 <body>
-    <div class="welcome">
         <h1 class="title">The Map</h1>
-    </div>
     <!--Navbar below. do not remove this.-->
     <div class="nav">
       <a href="index.html" class="navbtn">Home</a>
