--- a/museum.html
+++ b/museum.html
@@ -9,10 +9,8 @@
     <title>Museum</title>
 </head>
 <body>
-    <div class="welcome">
         <h1 class="title">Museum</h1>
         <h3 style="text-align: center;">Explore the list of artifacts below.</h3>
-    </div>
     <!--Navbar below. do not remove this.-->
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
@@ -35,19 +33,19 @@
             </thead>
             <tbody>
             <tr>
-                <td><a href="https://i.ibb.co/P1GDNzt/creeper-head.png" style="text-decoration: none;" class="link">Creeper Head</a></td>
+                <td><a href="https://i.ibb.co/P1GDNzt/creeper-head.png" style="text-decoration: none;" title="click to view creeper head"class="link">Creeper Head</a></td>
             </tr>
             <tr>
-                <td><a href="https://i.ibb.co/2trZJgQ/warden-head.png" style="text-decoration: none;" class="link">Warden Head</a></td>
+                <td><a href="https://i.ibb.co/2trZJgQ/warden-head.png" style="text-decoration: none;" title="click to view warden head"class="link">Warden Head</a></td>
             </tr>
             <tr>
-                <td><a href="https://i.ibb.co/9ckcfQy/dragon-head.png" style="text-decoration: none;" class="link">Dragon Head</a></td>
+                <td><a href="https://i.ibb.co/9ckcfQy/dragon-head.png" style="text-decoration: none;" title="click to view dragon head"class="link">Dragon Head</a></td>
             </tr>
             <tr>
-                <td><a href="https://i.ibb.co/r0Wzx2S/artifacts-wing1.png" style="text-decoration: none;" class="link">Artifacts Wing 1</a></td>
+                <td><a href="https://i.ibb.co/r0Wzx2S/artifacts-wing1.png" style="text-decoration: none;" title="click to view artifacts wing 1"class="link">Artifacts Wing 1</a></td>
             </tr>
             <tr>
-                <td><a href="https://i.ibb.co/2SZBWjP/artifacts-wing2.png" style="text-decoration: none;" class="link">Artifacts Wing 2</a></a></td>
+                <td><a href="https://i.ibb.co/2SZBWjP/artifacts-wing2.png" style="text-decoration: none;" title="click to view artifacts wing 2" class="link">Artifacts Wing 2</a></td>
             </tr>
             </tbody>
         </table><!--List end-->
